feat: rewrite the security system (currently: basic http auth)
