# src/main/java/me/gmz/alter/controllers/UserController.java
@@ -1,72 +1,39 @@
 package me.gmz.alter.controllers;
 
 import me.gmz.alter.dto.SignOptions;
-import me.gmz.alter.dto.SignResult;
-import me.gmz.alter.entities.User;
+import me.gmz.alter.entities.AppUser;
 import me.gmz.alter.repositories.UserRepository;
-import me.gmz.alter.security.MissingTokenException;
-import me.gmz.alter.security.Token;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.Optional;
 
 @RestController
 public class UserController {
+    private final PasswordEncoder passwordEncoder;
     private final UserRepository userRepository;
 
-    public UserController(UserRepository userRepository) {
+    public UserController(PasswordEncoder passwordEncoder, UserRepository userRepository) {
+        this.passwordEncoder = passwordEncoder;
         this.userRepository = userRepository;
     }
 
-    @PostMapping("/users/signup")
-    public SignResult signup(@RequestBody SignOptions signOptions) {
-        String username = signOptions.username();
-        String password = signOptions.password();
-        String hashedPassword = password; //TODO
-        String token = Token.generate();
-
-        userRepository.save(new User(username, hashedPassword, false, token));
-
-        return new SignResult(token);
-    }
-
-    @PostMapping("/users/signin")
-    public ResponseEntity<SignResult> signin(@RequestBody SignOptions signOptions) {
-        String username = signOptions.username();
-        String password = signOptions.password();
-        String hashedPassword = password; //TODO
-
-        Optional<User> userOptional = userRepository.findByUsernameAndPassword(username, hashedPassword);
-        return userOptional
-                .map(user -> new ResponseEntity<>(new SignResult(user.getToken()), HttpStatus.OK))
-                .orElseGet(() -> new ResponseEntity<>(null, HttpStatus.NOT_FOUND));
-    }
-
-    @PostMapping("/users/signout")
-    public void signout(@RequestHeader(name = "Authorization") String authorizationHeader) throws MissingTokenException {
-        String token = Token.extractFromHeader(authorizationHeader);
-
-        Optional<User> userOptional = userRepository.findByToken(token);
-        if(userOptional.isEmpty()) {
-            return;
+    @PostMapping("/register")
+    public ResponseEntity<Void> register(@RequestBody SignOptions signOptions) {
+        if(userRepository.findById(signOptions.username()).isPresent()) {
+            return new ResponseEntity<>(HttpStatus.CONFLICT);
         }
 
-        User user = userOptional.get();
-        user.setToken(null);
+        AppUser user = new AppUser(signOptions.username(), passwordEncoder.encode(signOptions.password()), false);
         userRepository.save(user);
-    }
 
-    @Transactional
-    @PostMapping("/users/delete")
-    public void delete(@RequestHeader(name = "Authorization") String authorizationHeader) throws MissingTokenException {
-        String token = Token.extractFromHeader(authorizationHeader);
-
-        userRepository.deleteByToken(token);
+        return new ResponseEntity<>(HttpStatus.CREATED);
     }
 }
